@@ -10,12 +10,19 @@
 	create_server_socket_by_string() twice when interface is supplied.
 	Reported by Don Cohen
 
+2006-02-21  Jörg Höhle  <hoehle@users.sourceforge.net>
+
+	Check compilation with MSVC6
+	* win32aux.d (with_file_id): fixed a typo from 2005-12-18.
+	* makemake.in [win32msvc]: for MS shell quoting, use template
+	echotab '$(RUN) -x "(print \"hi\")"'
+	
 2006-02-05  Jörg Höhle  <hoehle@users.sourceforge.net>
 
 	fixed bug #[ 1388897 ]: FFI:uint64 maps to long long when supported
 	* foreign.d [HAVE_LONG_LONG]: use av_start_longlong,
 	va_return_longlong etc..  Otherwise, continue to pass a struct of
-        two uint32: this is compatible with MSVC's __int64 handling.
+	two uint32: this is compatible with MSVC's __int64 handling.
 
 2006-02-04  Jörg Höhle  <hoehle@users.sourceforge.net>
 
